# cmake-modules

./: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt  modules.cpp  modules.h
modules/libA/: CMakeLists.txt
modules/root/: CMakeLists.txt  root.h
